# ecs

code/: CMakeLists.txt  README.md  plotting.py
code/python version/: config.json  vector_based_corner_detection.py  visualisation.py
code/src/: corner_detect.c  corner_detect.h  csv_reader.c  csv_reader.h  lidarData.csv  lidarDataCartesian.csv  main.c  myprogram
